5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4481/executions/1582_1331.log
== TEST (2019-03-31 09:42:22) 
-- CODE:
print(50//3)
-- OUTPUT:
16
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 09:42:25) 
-- CODE:
print(50//3)
-- EXECUTION TIME:
0.134457
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 09:43:13) 
-- CODE:
print(50/3)
-- OUTPUT:
16.666666666666668
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 09:43:31) 
-- CODE:
print(50x//3n
-- ERROR:
File "XXXX", line 1
    print(50x//3n
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 15:56:33) 
-- CODE:
#valor pago a cada guerreiro
print(50//3)
#valor pago ao informate
print(50%3)
-- OUTPUT:
16
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 15:56:35) 
-- CODE:
#valor pago a cada guerreiro
print(50//3)
#valor pago ao informate
print(50%3)
-- EXECUTION TIME:
0.212569
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 15:56:42) 
-- CODE:
#valor pago a cada guerreiro
print(50//3)
#valor pago ao informate
print(50%3)
-- EXECUTION TIME:
0.171266
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 15:56:48) 
-- CODE:
#valor pago a cada guerreiro
print(50//3)
#valor pago ao informate
print(50%3)
-- EXECUTION TIME:
0.156362
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 15:56:57) 
-- CODE:
#valor pago a cada guerreiro
print(50//3)
#valor pago ao informate
print(50%3)
-- OUTPUT:
16
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 15:56:58) 
-- CODE:
#valor pago a cada guerreiro
print(50//3)
#valor pago ao informate
print(50%3)
-- EXECUTION TIME:
0.140235
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 15:56:59) 
-- CODE:
#valor pago a cada guerreiro
print(50//3)
#valor pago ao informate
print(50%3)
-- EXECUTION TIME:
0.140999
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 15:56:59) 
-- CODE:
#valor pago a cada guerreiro
print(50//3)
#valor pago ao informate
print(50%3)
-- EXECUTION TIME:
0.181238
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 15:56:59) 
-- CODE:
#valor pago a cada guerreiro
print(50//3)
#valor pago ao informate
print(50%3)
-- EXECUTION TIME:
0.135521
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 15:57:00) 
-- CODE:
#valor pago a cada guerreiro
print(50//3)
#valor pago ao informate
print(50%3)
-- EXECUTION TIME:
0.222842
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 15:57:00) 
-- CODE:
#valor pago a cada guerreiro
print(50//3)
#valor pago ao informate
print(50%3)
-- EXECUTION TIME:
0.124051
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 15:57:00) 
-- CODE:
#valor pago a cada guerreiro
print(50//3)
#valor pago ao informate
print(50%3)
-- EXECUTION TIME:
0.143205
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 15:57:01) 
-- CODE:
#valor pago a cada guerreiro
print(50//3)
#valor pago ao informate
print(50%3)
-- EXECUTION TIME:
0.212905
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 15:57:02) 
-- CODE:
#valor pago a cada guerreiro
print(50//3)
#valor pago ao informate
print(50%3)
-- EXECUTION TIME:
0.206189
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
